@@ -1,29 +1,0 @@
-README
-
-(construction in progress...)
-
-FEATURES:
-		- no abort on failed file: tries its best to copy all the others,
-		  so you don't have to start the whole thing again just because
-		  one single file didn't ant to cooperate. prints a list of failed
-		  files after finishing its list. so after fixing the problem
-		  (encoding/whatever) you just start again with "-k" and you're done
-
-
-LIMITS:
-		- only regular files and directories, no symlinks, nodes or sth.
-		- max. ??? files, max. filesize ??? Bytes, max. list size ??? Bytes
-
-
-		- Examples:
-		
-			- x86_64:
-				- no. of files to copy   9223372036854775807
-				- total size (Bytes)     9223372036854775807
-				- file size (Bytes)      9223372036854775807
-				- max. speed (Bytes/s)   18446744073709551615
-			- i686
-				- no. of files to copy   2147483647
-				- total size (Bytes)     9223372036854775807
-				- file size (Bytes)      9223372036854775807
-				- max. speed (Bytes/s)   4294967295
